tests/ui/const-generics/generic_const_exprs/issue-105608.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-105608.rs:13:22
   |
LL |     Combination::<0>.and::<_>().and::<_>();
   |                      ^^^ cannot infer type of the type parameter `M` declared on the method `and`
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
